flexbison-master/test.output
Gramática

    0 $accept: prog $end

    1 prog: stmts

    2 stmts: %empty
    3      | stmt SEMICOLON stmts

    4 stmt: STRING
    5     | NUM
    6     | OTHER


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    STRING <email> (258) 4
    NUM <number> (259) 5
    OTHER (260) 6
    SEMICOLON (261) 3


Não terminais com as regras onde eles aparecem

    $accept (7)
        à esquerda: 0
    prog (8)
        à esquerda: 1
        à direita: 0
    stmts (9)
        à esquerda: 2 3
        à direita: 1 3
    stmt (10)
        à esquerda: 4 5 6
        à direita: 3


Estado 0

    0 $accept: . prog $end

    STRING  deslocar, e ir ao estado 1
    NUM     deslocar, e ir ao estado 2
    OTHER   deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 2 (stmts)

    prog   ir ao estado 4
    stmts  ir ao estado 5
    stmt   ir ao estado 6


Estado 1

    4 stmt: STRING .

    $padrão  reduzir usando a regra 4 (stmt)


Estado 2

    5 stmt: NUM .

    $padrão  reduzir usando a regra 5 (stmt)


Estado 3

    6 stmt: OTHER .

    $padrão  reduzir usando a regra 6 (stmt)


Estado 4

    0 $accept: prog . $end

    $end  deslocar, e ir ao estado 7


Estado 5

    1 prog: stmts .

    $padrão  reduzir usando a regra 1 (prog)


Estado 6

    3 stmts: stmt . SEMICOLON stmts

    SEMICOLON  deslocar, e ir ao estado 8


Estado 7

    0 $accept: prog $end .

    $padrão  aceitar


Estado 8

    3 stmts: stmt SEMICOLON . stmts

    STRING  deslocar, e ir ao estado 1
    NUM     deslocar, e ir ao estado 2
    OTHER   deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 2 (stmts)

    stmts  ir ao estado 9
    stmt   ir ao estado 6


Estado 9

    3 stmts: stmt SEMICOLON stmts .

    $padrão  reduzir usando a regra 3 (stmts)
